[gd_scene load_steps=3 format=3 uid="uid://dmr7ls14p2vag"]

[ext_resource type="Script" path="res://src/player_overlay.gd" id="1_8awoc"]
[ext_resource type="PackedScene" uid="uid://dnhnrabrf57os" path="res://assets/scenes/hotbar_inventory.tscn" id="2_4b42q"]

[node name="PlayerOverlay" type="CanvasLayer"]
script = ExtResource("1_8awoc")

[node name="HotbarInventory" parent="." instance=ExtResource("2_4b42q")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -72.0
offset_right = 342.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="InteractLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Interact"
horizontal_alignment = 1
vertical_alignment = 1
